fixing spacing h2

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -66,6 +66,14 @@ body {
   text-align: left;
 }
 
+#presentation{
+  text-align: justify;
+}
+
+#informations h2, #skills h2{
+  margin-bottom: 0 !important;
+}
+
 #skills-phone {
   display: none !important;
   background-color:rgb(0, 0, 0) !important;
